@@ -23,6 +23,7 @@
 16. Add form validation to some dialogs.
 17. Clicking on player's sleep time in players menu will show sleep settings
     dialog.
+18. Add an album-sort menu to subtolbar when showing albums.
 
 0.7.4
 -----
